[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelRunner/LevelRunner.gd" type="Script" id=1]

[node name="LevelRunner" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]

[node name="Pause" type="Button" parent="Level"]
margin_left = 984.0
margin_top = 8.0
margin_right = 1048.0
margin_bottom = 32.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="PopupPanel" parent="Level"]
visible = true
margin_left = 336.0
margin_top = 144.0
margin_right = 720.0
margin_bottom = 368.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Level/Settings"]
margin_left = 4.0
margin_top = 4.0
margin_right = 380.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsExit" type="HBoxContainer" parent="Level/Settings/Control"]
margin_left = 360.0
margin_right = 384.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitSettings" type="Button" parent="Level/Settings/Control/SettingsExit"]
margin_right = 19.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsHeader" type="VBoxContainer" parent="Level/Settings/Control"]
margin_left = 20.0
margin_right = 356.0
margin_bottom = 33.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Level/Settings/Control/SettingsHeader"]
margin_top = 9.0
margin_right = 336.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
uppercase = true

[node name="MusicVolume" type="Control" parent="Level/Settings/Control"]
margin_left = 20.0
margin_top = 33.0
margin_right = 356.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="VBoxContainer" parent="Level/Settings/Control/MusicVolume"]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Level/Settings/Control/MusicVolume/MusicVolumeLabel"]
margin_top = 13.0
margin_right = 40.0
margin_bottom = 27.0
text = "Music"
align = 1
valign = 1

[node name="MusicVolumeSlider" type="VBoxContainer" parent="Level/Settings/Control/MusicVolume"]
margin_left = 48.0
margin_top = -1.0
margin_right = 336.0
margin_bottom = 35.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Level/Settings/Control/MusicVolume/MusicVolumeSlider"]
margin_top = 10.0
margin_right = 288.0
margin_bottom = 26.0
value = 100.0

[node name="SFXVolume" type="Control" parent="Level/Settings/Control"]
margin_left = 20.0
margin_top = 68.0
margin_right = 356.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolumeLabel" type="VBoxContainer" parent="Level/Settings/Control/SFXVolume"]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Level/Settings/Control/SFXVolume/SFXVolumeLabel"]
margin_top = 13.0
margin_right = 40.0
margin_bottom = 27.0
text = "SFX"
align = 1
valign = 1

[node name="SFXVolumeSlider" type="VBoxContainer" parent="Level/Settings/Control/SFXVolume"]
margin_left = 48.0
margin_top = -1.0
margin_right = 336.0
margin_bottom = 35.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Level/Settings/Control/SFXVolume/SFXVolumeSlider"]
margin_top = 10.0
margin_right = 288.0
margin_bottom = 26.0
value = 100.0

[node name="Fullscreen" type="Control" parent="Level/Settings/Control"]
margin_left = 20.0
margin_top = 140.0
margin_right = 140.0
margin_bottom = 165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="VBoxContainer" parent="Level/Settings/Control/Fullscreen"]
margin_right = 72.0
margin_bottom = 25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Level/Settings/Control/Fullscreen/FullscreenLabel"]
margin_top = 5.0
margin_right = 72.0
margin_bottom = 19.0
text = "Fullscreen"
align = 1
valign = 1

[node name="FullscreenTick" type="VBoxContainer" parent="Level/Settings/Control/Fullscreen"]
margin_left = 72.0
margin_right = 96.0
margin_bottom = 25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Level/Settings/Control/Fullscreen/FullscreenTick"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true
align = 1

[node name="ExitLevel" type="Control" parent="Level/Settings/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLevelButton" type="VBoxContainer" parent="Level/Settings/Control/ExitLevel"]
margin_left = 148.0
margin_top = 188.0
margin_right = 221.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Level/Settings/Control/ExitLevel/ExitLevelButton"]
margin_right = 73.0
margin_bottom = 20.0
text = "Exit Level"

[node name="LeaveConfirmation" type="PopupPanel" parent="Level"]
margin_right = 8.0
margin_bottom = 8.0

[node name="Reward" type="Node2D" parent="."]
visible = false
[connection signal="pressed" from="Level/Pause" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Level/Settings/Control/SettingsExit/ExitSettings" to="." method="_on_SettingsButtonExit_pressed"]
[connection signal="value_changed" from="Level/Settings/Control/MusicVolume/MusicVolumeSlider/HSlider" to="." method="_on_MusicVolume_changed"]
[connection signal="value_changed" from="Level/Settings/Control/SFXVolume/SFXVolumeSlider/HSlider" to="." method="_on_SFXVolume_changed"]
[connection signal="toggled" from="Level/Settings/Control/Fullscreen/FullscreenTick/CheckBox" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="Level/Settings/Control/ExitLevel/ExitLevelButton/Button" to="." method="_on_ExitLevelButton_pressed"]
